# procon35_kyougi

./: .gitmodules  README.md
problems/: 121_121_seed0.json  121_121_seed1.json  121_121_seed2.json  121_248_seed0.json  121_248_seed1.json  121_248_seed2.json  121_58_seed0.json  121_58_seed1.json  121_58_seed2.json  128_128_seed0.json  128_128_seed1.json  128_128_seed2.json  128_256_seed0.json  128_256_seed1.json  128_256_seed2.json  128_32_seed0.json  128_32_seed1.json  128_32_seed2.json  128_64_seed0.json  128_64_seed1.json  128_64_seed2.json  248_121_seed0.json  248_121_seed1.json  248_121_seed2.json  248_248_seed0.json  248_248_seed1.json  248_248_seed2.json  248_58_seed0.json  248_58_seed1.json  248_58_seed2.json  256_128_seed0.json  256_128_seed1.json  256_128_seed2.json  256_256_seed0.json  256_256_seed1.json  256_256_seed2.json  256_32_seed0.json  256_32_seed1.json  256_32_seed2.json  256_64_seed0.json  (+140 more)
solvers/: begining_new_era.py  check_answer.py  demo.py  do.py  field.py  generate_prob.py  image.py  left_up.py  pretrain.py  problem.py  simasima.py  solver_beam.py  solver_linecnt.py  souatari.py  tester.py
solvers/beam/: .gitignore  CMakeLists.txt  README.md  build.sh  build_arm.sh  prof.sh
solvers/beam/src/: AnswerTree.h  BeamEvaluator.cpp  BeamEvaluator.h  BeamSolver.cpp  BeamSolver.h  BeamSolver_chokudai.cpp  LineCountSolver.cpp  LineCountSolver.h  SimpleSolver.cpp  SimpleSolver.h  SpinMutex.h  VDivideSolver.cpp  VDivideSolver.h  bitboard.cpp  bitboard.h  board.cpp  board.h  main.cpp  main_SimpleSolver.cpp  pext.h  solver.h
solvers/beam/test/: test_LineCountSolver.cpp  test_bitboard.cpp  test_board.cpp
tools/: genprob2.py  solver_sever.py
visualizer/: SettingWindow.py  back.py  board_window.py  cell_colors.py  config.py  double_widget.py  exec_solver.py  external_solver.py  first_double_widget.py  get_problem.py  get_solver.py  gl.py  homewindow.py  main.py  main3.py  main4.py  mainwidget.py  mainwindow.py  make_api_json.py  move.py  post_answer.py  scroll_widget.py  setting_widget.py  solve.py  subhomewindow.py  subwindow.py  test.py  widget_dict.py
